projekt/kubernetes/front/front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: front-deployment
  labels:
    app: front
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: 6745345/front-image:Prod1.0
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent

---

apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: front-service
spec:
  selector:
    app: front
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
